all functionality added

--- a/index.html
+++ b/index.html
@@ -49,17 +49,9 @@
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
-  <!-- <div class="card thank-you">
-    <div class="top">
-      <img src="./images/illustration-thank-you.svg" alt="icon-star" class="Thank-you">
-      <p class="rating-value">You chose <span>4</span> out of 5</p>
-    </div>
-    <div class="bottom">
-      <h1>Thank You</h1>
-      <p>We appreciate you taking the time to give a rating. If you ever need more support, 
-        don’t hesitate to get in touch! </p>
-    </div>
-  </div> -->
+  <!-- <div class="card-thank-you">
+    <!--  -->
+ 
 
   <!-- You selected Add rating here out of 5 -->
 
